--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxtjs/apollo": "^4.0.1-rc.1",
     "@nuxtjs/axios": "^5.10.3",
+    "@nuxtjs/now-builder": "^0.17.3",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
     "ant-design-vue": "^1.6.1",
     "antd-dayjs-webpack-plugin": "^1.0.0",
@@ -22,7 +23,7 @@
     "core-js": "2",
     "cross-env": "^7.0.2",
     "graphql-tag": "^2.10.3",
-    "nuxt": "^2.13.0",
+    "nuxt": "^2.13.3",
     "nuxt-webfontloader": "^1.1.0"
   },
   "devDependencies": {
