--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxtjs/apollo": "^4.0.1-rc.1",
     "@nuxtjs/axios": "^5.10.3",
+    "@nuxtjs/lunr-module": "^0.3.1",
     "@nuxtjs/now-builder": "^0.17.3",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
     "ant-design-vue": "^1.6.1",
@@ -24,7 +25,9 @@
     "cross-env": "^7.0.2",
     "graphql-tag": "^2.10.3",
     "nuxt": "^2.13.3",
-    "nuxt-webfontloader": "^1.1.0"
+    "nuxt-lazy-load": "^1.2.4",
+    "nuxt-webfontloader": "^1.1.0",
+    "v-viewer": "^1.5.1"
   },
   "devDependencies": {
     "@babel/runtime-corejs2": "^7.10.0",
