--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "core-js": "2",
     "cross-env": "^7.0.2",
     "graphql-tag": "^2.10.3",
+    "jquery": "^3.5.1",
     "nuxt": "^2.13.3",
     "nuxt-lazy-load": "^1.2.4",
     "nuxt-webfontloader": "^1.1.0",
-    "v-viewer": "^1.5.1"
+    "v-viewer": "^1.5.1",
+    "vue-scrollto": "^2.18.2",
+    "vue-slick-carousel": "^1.0.6"
   },
   "devDependencies": {
     "@babel/runtime-corejs2": "^7.10.0",
